# nuvem_de_som

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-tests.yml  conventional-label.yaml  coverage.yml  license_check.yml  lint.yml  pip_audit.yml  publish_stable.yml  release-preview.yml  release_workflow.yml  repo-health.yml
docs/: api.md
examples/: get_tracks_full.py  search_people.py  search_tracks.py
nuvem_de_som/: __init__.py  cli.py  version.py
nuvem_de_som.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_get_tracks_full.py  test_import.py  test_unit.py
