[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nuvem_de_som"
dynamic = ["version"]
description = "SoundCloud search and stream extractor"
license = { text = "Apache-2.0" }
authors = [{ name = "JarbasAi" }]
requires-python = ">=3.8"
dependencies = ["bs4", "requests"]

[project.optional-dependencies]
yt-dlp = ["yt-dlp"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/OpenJarbas/nuvem_de_som"

[tool.setuptools.dynamic]
version = { attr = "nuvem_de_som.version.__version__" }

[tool.setuptools.packages.find]
include = ["nuvem_de_som*"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit live network endpoints (deselect with -m 'not integration')",
]
